# llm-recommender

./: .gitignore  .pylintrc  README.md  pyproject.toml
.github/workflows/: code_checking.yml
data/: category_triplets.csv  interactions.csv  items.csv  items_easter_eggs.csv  new_categories_sample.csv  predicted_categories.csv
data/parser_collected_data/: ozon_links.csv
data/parser_collected_data/categories_links/: links_to_check_aksessuary.csv  links_to_check_apteka.csv  links_to_check_avtomobili.csv  links_to_check_avtotovary.csv  links_to_check_bytovaya.csv  links_to_check_detskie.csv  links_to_check_dom.csv  links_to_check_electronika.csv  links_to_check_himiya.csv  links_to_check_igryNsoft.csv  links_to_check_kantselyrskie.csv  links_to_check_knigi.csv  links_to_check_krasota.csv  links_to_check_mebel.csv  links_to_check_muzyka.csv  links_to_check_obuv.csv  links_to_check_odezhda.csv  links_to_check_ohota.csv  links_to_check_tsifrovye.csv  links_to_check_vintazh.csv  links_to_check_yuvelirnye.csv  links_to_check_zhivotnyh.csv
data/parser_collected_data/items/: items_Автомобили.csv  items_Автотовары.csv  items_Аксессуары.csv  (+19 more)
notebooks/: data_for_llm.ipynb  likerate.ipynb  matching.ipynb  precision.ipynb  precision_final.ipynb  structured_output.ipynb
src/: logger.py
src/bandits/: bandit.py  bandits_api.py  metrics.py  test_bandit.py  train_bandit.py
src/bot/: main.py  reqs.py
src/llm/: file_workflow.ipynb  matching.ipynb  train.py  train_evaluate.ipynb
src/metrics/: graphs.py  metrics.py
src/ozon_parser/: README.md  run_parser.py  settings.ini
(+12 files in other folders)
