[project]
name = "llm-recommender"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "", email = ""},
]
dependencies = ["flake8>=7.1.1", "pylint>=3.3.2", "pyTelegramBotAPI>=4.25.0"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
