[project]
name = "llm-recommender"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "", email = ""},
]
dependencies = ["flake8>=7.1.1", "pylint>=3.3.2", "pyTelegramBotAPI>=4.25.0", "pandas>=2.2.3", "selenium>=4.27.1", "configparser>=7.1.0", "webdriver-manager>=4.0.2", "undetected-chromedriver>=3.5.5", "setuptools>=75.6.0"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
